fixed dialog and dropdown visibility at page load

--- a/public/styles/dialog.css
+++ b/public/styles/dialog.css
@@ -10,6 +10,7 @@
   bottom: 0;
   right: 0;
   z-index: 10;
+  visibility: hidden;
 }
 
 [dialog][backdrop] {
