--- a/public/styles/dropdown.css
+++ b/public/styles/dropdown.css
@@ -6,6 +6,7 @@
 [dropdown] {
   position: absolute;
   z-index: 2;
+  visibility: hidden;
 }
 
 [dropdown][align-left] {
